compiler/testData/diagnostics/testsWithJsStdLib/isInitializedInInline.fir.kt
lateinit var foo: String
<!NOTHING_TO_INLINE!>inline<!> fun isFooInitialized() = ::foo.isInitialized
